<resources>
    <string name="app_name">MeMarket</string>

    <string-array name="units_array">
        <item>Units</item>
        <item>Gramos</item>
        <item>Kilogramos</item>
        <item>Libras</item>
        <item>Onzas</item>
        <item>Litros</item>
        <item>Mililitros</item>
        <item>Galones</item>
    </string-array>

    <string-array name="companyTypesList">
        <item>Supermercado</item>
        <item>Farmacia</item>
        <item>Almacen</item>
        <item>Variedades</item>
    </string-array>

    <!--General Text-->
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>

    <!--Camera and barcode related text-->
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Scan detector dependencies cannot be downloaded due to low device storage</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcode_manual_entry_button">"Enter code manually"</string>


    <string name="select_company">"Select company"</string>
    <string name="select_store">"Select store"</string>
    <string name="my_profile">"My profile"</string>

    <!-- Welcome Card-->
    <string name="welcome_card_tittle">"Welcome!"</string>
    <string name="welcome_card_text">"Use this app to track all your favorite products and share the offers you find."</string>
    <string name="got_it_button">"Got it"</string>

    <!--Product activity-->
    <string name="no_price">"No Price"</string>
    <string name="update_price">"Update"</string>
    <string name="purchase_history_button">"Purchases history"</string>
    <string name="select_product">"Select product"</string>
    <string name="select_product_instructions">"There is more than one product with this code|"</string>

    <string name="update_button">"Update"</string>
    <string name="cancel_button">"Cancel"</string>
    <string name="add_button">"Add"</string>
    <string name="search_button">"Search"</string>
    <string name="scan_button">"Scan"</string>
    <string name="compare_button">"Compare"</string>
    <string name="select_button">"Select"</string>
    <string name="add_purchase_button">"Add purchase"</string>
    <string name="end_register_button">"End register"</string>
    <string name="mark_as_offer_dialog">"Mark this product as offer"</string>
    <string name="offer_price_text">"Offer Price"</string>
    <string name="offer_button_dialog_1">"Mark as offer!"</string>
    <string name="offer_button_dialog_2">"Offer price"</string>
    <string name="no_offer">"No offer today"</string>

    <!--Product layout text -->
    <string name="offer_bottom_nav_text">"On sale"</string>
    <string name="add_purchase_bottom_nav_text">"Add purchase"</string>
    <string name="view_purchases_text">"View purchases"</string>
    <string name="compare_bottom_nav_text">"Compare"</string>
    <string name="purchase_history_bottom_nav_text">"History"</string>

    <!--Snackbars text -->
    <string name="purchase_added_snackbar">"Purchase added"</string>
    <string name="purchases_added_snackbar">"All purchases added"</string>
    <string name="undo_snackbar_button">"Undo"</string>

    <!--Product Price Card Text -->
    <string name="price_text">"Price"</string>
    <string name="offer_text">"Offer price"</string>

    <!--Product Last purchase Card Text -->
    <string name="last_purchase_text">"Last purchase"</string>

    <!--Dialogs Text -->
    <string name="select_store_instruction">"Please select a store first"</string>
    <string name="add_all_purchases_question">"Would you like to register your purchases? The cart will be emptied."</string>
    <string name="clear_cart_question">"Would you like to clear your cart?"</string>


    <string name="companies_list">"Companies list</string>
    <string name="company_data_input_instructions">"New company"</string>
    <string name="company_name_input">"Name</string>
    <string name="company_type_input">"Type</string>
    <string name="product_price_input">"Price"</string>
    <string name="product_unit_input">"Unit"</string>
    <string name="product_quantity_input">"Quantity"</string>
    <string name="product_type_input">"Type"</string>
    <string name="product_brand_input">"Brand"</string>
    <string name="product_name_input">"Name"</string>
    <string name="product_image_input">"Add a photo"</string>
    <string name="product_code_input">"Code"</string>
    <string name="store_name_input">"Store name</string>
    <string name="store_address_input">"Address</string>
    <string name="store_phone_input">"Phone</string>


    <!--Login Activity-->
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="use_providers_text">Or use one of the following: </string>
    <string name="account_created">Account created</string>

    <string name="title_activity_start">startActivity</string>

    <string name="facebook_app_id">154652135120969</string>
    <string name="fb_login_protocol_scheme">fb154652135120969</string>
    <string name="title_activity_purchase_history">purchaseHistory</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_company_type">Add new type&#8230;"</string>
    <string name="add_new_unit_type">Add new unit...</string>
    <string name="missing_info">Cannot add missing information.</string>
    <string name="update_error">Update error</string>
    <string name="company_label">Company</string>
    <string name="store_label">Store</string>
    <string name="date_label">Date</string>
    <string name="action_shopping_list">Shoping list</string>
    <string name="my_cart_label">My cart</string>
    <string name="done">Done</string>
    <string name="clear_cart">Clear cart</string>
    <string name="update_price_instruction">Please set product price first</string>
    <string name="my_cart_total_text">Total</string>
    <string name="my_cart_discount_text">Discount</string>
    <string name="my_cart_subtotal_text">Subtotal</string>
    <string name="product_no_product_selected">No product selected</string>
    <string name="product_no_store_selected">No store selected</string>
    <string name="select_store_for_more_text">Select a store to see more information.</string>
    <string name="search_hint">Find a product</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="results">Results</string>
    <string name="qty">Qty</string>
    <string name="clear_all_shopping_list">Clear All</string>
    <string name="clear_checked_shopping_list">Clear only checked</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_city">Select city</string>
    <string name="countries_list">Paises</string>
    <string name="city_pref">selected_city</string>
    <string name="empty">Empty</string>
    <string name="country_pref">selected_country</string>
    <string name="getting_current_location">Getting current location</string>
    <string name="current_location">Current location</string>
    <string name="country">Country</string>
    <string name="country_code">Country code</string>
    <string name="city">City</string>
    <string name="question_add_city">Do you want to add this city?</string>
    <string name="permission_location_rationale">Location permission is needed to add a city</string>
    <string name="getting_location">Getting location</string>
    <string name="getting_city_name">Getting city name</string>
    <string name="getting_gps_signal">Getting gps signal</string>
    <string name="city_location_error">Cannot locate city</string>
    <string name="product_description_input">Description</string>
    <string name="saving_new_product">Saving</string>
    <string name="loading_picture">Loading picture</string>
    <string name="loading_product_data">Loading product data</string>


</resources>
