<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/offer_button"
        android:title="@string/offer_bottom_nav_text"
        android:icon="@drawable/ic_attach_money_black_24dp"
        />

    <item
        android:id="@+id/add_purchase_button"
        android:title="@string/add_purchase_bottom_nav_text"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        />

    <item
        android:id="@+id/compare_price_button"
        android:title="@string/compare_bottom_nav_text"
        android:icon="@drawable/ic_compare_arrows_black_24dp"
         />

    <item
        android:id="@+id/purchase_history_button"
        android:title="@string/purchase_history_bottom_nav_text"
        android:icon="@drawable/ic_history_black_24dp"
        />
</menu>