<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.memarket.NewProduct">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/product_code_input" />

        <TextView
            android:id="@+id/productCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAlignment="center" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/productImageInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/no_product"
                android:layout_gravity="center"
                android:onClick="takePicture"
                android:contentDescription="@string/product_image_input"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name_input" />

            <EditText
                android:id="@+id/productNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_type_input" />

            <EditText
                android:id="@+id/productTypeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_brand_input" />

            <EditText
                android:id="@+id/productBrandInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity_input" />

            <EditText
                android:id="@+id/productQuantityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/productUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_unit_input" />

            <Spinner
                android:id="@+id/spinner_unit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price_input" />


            <EditText
                android:id="@+id/productPriceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAddProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_button"
                    android:onClick="addProductButton"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:onClick="cancelButton"
                    android:theme="@style/ThemeOverlay.MyDarkButton"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
