<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectedStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Store name"/>

        <LinearLayout
            android:id="@+id/prices_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/productPriceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price_text"
                style="@style/Base.TextAppearance.AppCompat.Body1"/>

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"

                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/offers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/productOfferText"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/offer_text" />

            <TextView
                android:id="@+id/offer_price"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/prices_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/on_sale_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_bottom_nav_text"
                android:textColor="@android:color/holo_green_dark"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/update_price_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_price"
                android:textColor="@color/secondaryDarkColor"/>

            <Button
                android:id="@+id/compare_price_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compare_button"
                android:textColor="@color/secondaryDarkColor"/>
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>