<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.memarket.NewStore">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_store_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/companyName"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="COMPANIA"
        android:textAlignment="center" />

    <View style="@style/VerticalDivider"
        android:layout_margin="8dp"
        />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/storeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_name_input"
                app:hintEnabled="true"
                android:inputType="text" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/storeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_address_input"
                app:hintEnabled="true"
                android:inputType="textMultiLine" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/storePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_phone_input"
                app:hintEnabled="true"
                android:inputType="phone" />

        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>



